better button sound

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="estimated-finish" id="estimatedFinishTime"></div>
 
     <!-- Audio element for playing notifications when a task finishes -->
-    <audio id="notificationSound" src="https://www.soundjay.com/buttons/button-1.mp3" preload="auto"></audio>
+    <audio id="notificationSound" src="https://www.soundjay.com/buttons/beep-07a.mp3" preload="auto"></audio>
   </div>
 
   <!-- Reference the JavaScript file -->
