Added dark mode

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <button id="toggleHelpButton" class="help-button" onclick="toggleHelpMenu()" title="Help">
             <i class="fas fa-question-circle"></i>
           </button>
+          <button id="toggleDarkModeButton" class="dark-mode-button" title="Toggle Dark Mode">
+  <i class="fas fa-moon"></i>
+</button>
         </div>
       </header>
        <!-- Collapsible Help Section -->
