fixed some weird dark mode issues

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="task-input">
           <input type="text" id="taskName" placeholder="Task Name" />
           <input type="number" id="taskTime" placeholder="Time" />
-          <select id="timeUnit">
+          <select id="timeUnit" aria-label="Time Unit">
             <option value="seconds">Seconds</option>
             <option value="minutes">Minutes</option>
             <option value="hours">Hours</option>
